# smartibrahim

farm/farm/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  farm.glade.bak  farm.gladep.bak
farm/farm/autom4te.cache/: output.0  requests  traces.0  traces.1
farm/farm/po/: Makefile  Makefile.in
farm/farm/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  farm  interface.c.bak  interface.h  main.c  materiel.c  materiel.h  materiel.txt
farm/farm/src/.deps/: callbacks.Po  materiel.Po
smarttt/: Makefile  config.h  config.status  configure  configure.in  smartfarm.glade  smartfarm.gladep
smarttt/autom4te.cache/: output.0  requests  traces.0  traces.1
smarttt/po/: Makefile  Makefile.in
smarttt/src/: Makefile  Makefile.am  Makefile.in  absence.txt  callbacks.c  callbacks.h  infouvriers.txt  interface.c.bak  interface.h.bak  main.c  ouvrier.c  ouvrier.h  smarttt
troupeau/: Makefile  c3.glade.bak  c3.gladep  config.status
troupeau/autom4te.cache/: requests
troupeau/src/: Makefile  Makefile.am  Makefile.in  c3  interface.c  tree.h  users.txt
troupeau/src/.deps/: callbacks.Po  tree.Po  troupeau.Po
